test/trivial/bradc/vardecls1a.good
vardecls1a.chpl:8: In function 'bar':
vardecls1a.chpl:9: error: statement references variable 'x' before it is defined
